# COMP90042_DATA

./: .gitattributes  GroupID099__COMP90042_Project_2026.ipynb  Project_Notebook.ipynb  pyproject.toml
Initial_Experiment/: start_train.sh  train_all.py
Optimal_Models/: BEST_MODEL_REPORT.md  EXPERIMENT_REPORT.md  climatron_colab.ipynb  pyproject.toml  setup.sh  train_colab.ipynb
Optimal_Models/.sisyphus/run-continuation/: ses_1f7b9f7eeffeujUJvZR4f7lo3S.json
Optimal_Models/src/: __init__.py  config.py
Optimal_Models/src/data/: __init__.py  claims.py  collator.py  evidence.py  pretraining.py  tokenizer.py
Optimal_Models/src/evaluation/: __init__.py  metrics.py  predictor.py
Optimal_Models/src/models/: __init__.py  config.py  layers.py  lora.py  model.py  variants.py
Optimal_Models/src/retrieval/: __init__.py  bi_encoder.py  faiss_index.py
Optimal_Models/src/training/: __init__.py  losses.py  scheduler.py  trainer.py
Optimal_Models/variants/: README.md  shared_model.py
Optimal_Models/variants/v7_baseline/: train.py
Optimal_Models/variants/v7_extended/: train.py
Optimal_Models/variants/v8_optimal/: train.py
Optimal_Models/variants/v9_wide/: train.py
data/: dev-claims-baseline.json  dev-claims.json  test-claims-unlabelled.json  train-claims.json
